[package]
name = "nonce_cache"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
solana-client = "2.2.2"
serde_json = "1.0.140"
solana-sdk = "2.2.2"
log = "0.4"
env_logger = "0.11.8"
yellowstone-grpc-client = { version = "8.0.0" }
yellowstone-grpc-proto = { version = "8.0.0" }
tokio = { version = "1.28", features = ["rt-multi-thread", "macros"] }
futures = "0.3"
bs58 = "0.5.0"
tonic = "0.12.3"
flexi_logger = "0.31.2"
solana-transaction-status = "2.2.7"
chrono = "0.4.40"
solana-program = "2.2.2"
borsh = "1.5.7"
dotenvy = "0.15.7"
once_cell = "1.21.3"
thiserror = "2.0.12"
grpc-client = { git = "https://github.com/miaomiaowu0428/grpc-client.git" }
utils = { git = "https://github.com/miaomiaowu0428/sol-utils.git" }
